; ModuleID = '/home/carl/AnghaBench/winfile/src/extr_wfloc.c_PreserveBitmapInRTL.c'
source_filename = "/home/carl/AnghaBench/winfile/src/extr_wfloc.c_PreserveBitmapInRTL.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LAYOUT_RTL = common dso_local global i32 0, align 4
@LAYOUT_BITMAPORIENTATIONPRESERVED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @PreserveBitmapInRTL(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i32 @GetLayout(i32 %4)
  %6 = load i32, i32* @LAYOUT_RTL, align 4
  %7 = icmp eq i32 %5, %6
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @LAYOUT_RTL, align 4
  %11 = load i32, i32* @LAYOUT_BITMAPORIENTATIONPRESERVED, align 4
  %12 = or i32 %10, %11
  %13 = call i32 @SetLayout(i32 %9, i32 %12)
  br label %14

14:                                               ; preds = %8, %1
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i32 @GetLayout(i32) #1

declare dso_local i32 @SetLayout(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
